--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,32 @@ img {
   width: 80%;
 }
 
+.btn {
+	background-color:#44c767;
+	border-radius:42px;
+	border:2px solid #18ab29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Trebuchet MS;
+	font-size:20px;
+	font-weight:bold;
+	font-style:italic;
+	padding:16px 31px;
+	text-decoration:none;
+  text-shadow:0px 1px 0px #2f6627;
+  text-align: center;
+}
+
+.btn:hover {
+	background-color:#5cbf2a;
+}
+
+.btn:active {
+	position:relative;
+	top:1px;
+}
+
 footer {
   margin-top: 5%;
   color: #EEEEEE;
